--- a/src/app/add-syllabus/add-syllabus.component.html
+++ b/src/app/add-syllabus/add-syllabus.component.html
@@ -39,8 +39,8 @@
         ></textarea>
       </div>
   
-      <button type="submit" class="btn btn-primary">Save Syllabus</button>
-      <button type="button" class="btn btn-secondary" (click)="onSubmit()">Complete</button>
+      <button type="submit" class="btn custom-primary btn-block">Save Syllabus</button>
+      <button type="button" class="btn custom-primary btn-block mt-2" (click)="onSubmit()">Complete</button>
     </form>
   </div>
   
