--- a/src/app/add-exam/add-exam.component.html
+++ b/src/app/add-exam/add-exam.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="card shadow">
-      <div class="card-header bg-primary text-white">
-        <h2 class="mb-0">Add Exam</h2>
+      <div class="card-header custom-header text-white">
+        <h2 class="mb-0" style="color: #ffffff;">Add Exam</h2>
       </div>
       <div class="card-body">
         <form (ngSubmit)="onSave()" #examForm="ngForm" class="needs-validation" novalidate>
@@ -31,8 +31,8 @@
             </select>
             <div class="invalid-feedback">Course is required.</div>
           </div>
-          <button type="submit" class="btn btn-success btn-block">Save</button>
-          <button type="button" (click)="onComplete()" class="btn btn-primary btn-block mt-2">Complete</button>
+          <button type="submit" class="btn custom-primary btn-block">Save</button>
+          <button type="button" (click)="onComplete()" class="btn custom-primary btn-block mt-2">Complete</button>
         </form>
       </div>
       <h4>{{message}}</h4>
